--- a/package.json
+++ b/package.json
@@ -100,5 +100,13 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "4.8.3"
+  },
+  "resolutions": {
+    "@storybook/addon-essentials/**/trim": "^0.0.3",
+    "@storybook/react/**/trim": "^0.0.3",
+    "@storybook/react/**/trim-newlines": "^3.0.1",
+    "@storybook/addon-essentials/**/glob-parent": "^5.1.2",
+    "@storybook/react/**/glob-parent": "^5.1.2",
+    "@storybook/builder-webpack4/**/glob-parent": "^5.1.2"
   }
 }
